--- a/Flutter Demo/pubspec.yaml
+++ b/Flutter Demo/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_phone_direct_caller: ^2.1.1
+  url_launcher: ^6.1.6
+  flutter_share: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
